--- a/osa4/package.json
+++ b/osa4/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-react": "^7.18.3",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "minimist": ">=1.2.2",
+    "acorn": ">=7.1.1"
   },
   "jest": {
     "testEnvironment": "node"
